# huun

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: aebc36cf515f_create_books_and_partitions_tables.py  c2d4f6a8b0e1_add_settings_to_books.py  d3e5f7a9b2c4_rename_partitions_to_chapters.py  e4f6a8b0c2d5_add_title_to_chapters.py
app/: config.py  database.py  main.py
app/ai/: client.py  prompts.py  service.py
app/books/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
